* fix z-index of fixed header in datatable.

--- a/src/less/views/datatable.less
+++ b/src/less/views/datatable.less
@@ -62,7 +62,7 @@
   &.head-fixed {
     > .datatable-head {
       position: fixed;
-      z-index: 10000;
+      z-index: @zindex-navbar-fixed;
       box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.15);
     }
   }
